syntax = "proto3";

package pb;
option go_package = "pb";

message consensusMessage {
    messageData msg = 1;
    repeated validator validators = 2;
}

message messageData {
    bytes   data = 1;     //actual opaque data for agreement
    bytes authPubKey = 2; //senders public key
}

message validator {
    bytes authPubKey = 1;     // Authoring node Secp256k1 public key (32bytes) - may not be sender
    bytes authorSign = 2;    // Signature of message data by author + method specific data by message creator node. format: hexEncode([]bytes)
}